methods.slug.SlugTracking.scala.code
var vert:Color = Color.green;

def isFacingTrail():Boolean = {var couleur:Color = getCouleurSol(); while (couleur==vert)
                                      {var test:Boolean = estFaceMur(); 
                                       if (!test) {avance();}
                                       else {recule();gauche();}
                                      }
                              }
isFacingTrail();
